# lccfq-lang

./: .gitignore  README.md  pyproject.toml
config/: default.toml  example.toml  grover5.toml
examples/: bell_state.py  circuit_play.py  dj.py  grover.py  grover5.py  opt_demo.py  teleportation.py  xeb_rcs.py  xeb_util.py
src/lccfq-lang/: backend.py  defaults.py  dispatch.py  error.py  instruction.py  isa.py  postconds.py  preconds.py  topology.py
src/lccfq-lang/arch/: circuit.py  instruction.py  isa.py  register.py
src/lccfq-lang/isa/: instruction.py
src/lccfq-lang/mach/: XYiSW.py  ir.py  topology.py  transpilers.py
src/lccfq_lang/: __init__.py  backend.py  defaults.py
src/lccfq_lang/arch/: circuit.py  context.py  error.py  instruction.py  isa.py  mapping.py  protocol.py  register.py
src/lccfq_lang/lang/: __init__.py  _common.py  _mc_decompose.py  amplification.py  arithmetic.py  blocks.py  codes.py  evolution.py  movement.py  multicontrol.py  oracles.py  preparation.py  single_qubit.py  (+3 more)
src/tests/: _sim.py  amplification_test.py  arithmetic_test.py  backend_test.py  base_test.py  challenge_test.py  codes_test.py  context_test.py  evolution_test.py  mapping_test.py  movement_test.py  multicontrol_test.py  oracles_test.py  preparation_test.py  register_test.py  single_nopar_gates_test.py  single_par_gates_test.py  swap_gate_test.py  synthesis_test.py  test_top_level_imports.py  topology_test.py  transforms_test.py  transpile_sqgs_test.py  transpile_tqgs_test.py  transpile_unitaries_test.py  two_nopar_gates_test.py  two_par_gates_test.py  variational_test.py
(+50 files in other folders)
