[project]
name = "lccfq_lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lccfq-backend",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
lccfq-backend = { path = "../lccfq-backend" }
